# hocbf_grasp_sim

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.json
.claude/skills/execute-review/: SKILL.md
.claude/skills/init-project/: SKILL.md
.claude/skills/review/: SKILL.md
config/: layout.json  system.json  thread_config.json
config/objects/: aluminum_can.json  paper_cup_empty.json  paper_cup_full.json  pet_bottle_empty.json  pet_bottle_full.json
config/opengl/: imgui.ini  point.frag  point.vert
docs/archive/: initial_plan.md
docs/design/: GUIDE.md
docs/design/decisions/: 001-technology-stack.md  002-system-architecture.md  003-simulation-design.md  004-object-model.md  005-safety-parameters.md  006-tau-min-estimation.md  007-observer-design.md  008-contact-detection.md
docs/plans/: 001-simulation-implementation.md
inc/: adaptive_theta_max.h  contact_detector.h  contec_counter.h  contec_da.h  gui.h  gui_widget.h  hocbf_qp.h  layout.h  load_shader.h  mode_definition.h  object_model.h  pci_helper.h  rfob.h  robot_system.h  simulator.h  stb_image.h  system_controller.h  thread_controller.h  thread_definition.h  writer.h
scripts/: plot.py
src/: controller.cc  gui.cc  load_shader.cc  main.cc  system_controller.cc  thread_controller.cc
